# petroleum-prices

./: .editorconfig  .env.template  .gitignore  Dockerfile  Makefile  README.md  basis_map.json  celerybeat-schedule.db  config.py  conftest.py  density.json  docker-compose.yaml  manage.py  petroleums.json  pyproject.toml
.github/workflows/: CI.yml  build.yml  check.yml  deploy.yml  deploy_docker_compose_by_ssh.yml  docker-publish.yml
bruno_requests/: bruno.json  create prices for bd.bru  create trade day for bd.bru  create_depot.bru  create_prices.bru  create_rail_tariff_for_depot_id.bru  create_user_prod_place.bru  get_prices.bru  get_prices_api.bru  get_rail_tariff.bru  get_trade_day_for_day.bru  hallo_by_name.bru  post_drf.bru  update_prod_places.bru  update_rzd_code.bru
bruno_requests/environments/: Local.bru
data/: basis_prod_map.csv
deploy/: deploy_docker_compose_by_ssh.yaml  docker-compose copy.yaml  docker-compose.yaml  docker-compose_copy.txt
deploy/nginx/: nginx conf copy.txt  nginx.conf  nginx_conf_copy.txt
deploy/nginx/conf.d/: nginx.conf
drf/: models.py  serializers.py  urls.py  views.py
drf/migrations/: 0001_initial.py  0002_hallo_msg.py  0003_alter_hallo_msg.py
nginx/: nginx.conf  nginx_conf_copy.txt
petroleum_prices/: .env.template  __init__.py  asgi.py  celery.py  config.py  settings.py  tasks.py  urls.py  wsgi.py
prices_analyzer/: API_views.py  admin.py  api_views.py  apps.py  converters.py  filters.py  models.py  petroleum.py  schemas.py  serializers.py  shemas.py  signals.py  urls.py  views.py
prices_analyzer/migrations/: 0001_initial.py  0002_alter_petroleum_amount_alter_petroleum_density_and_more.py  0003_petroleum_retail_price_alter_petroleum_price.py  0004_basis_productkey_sort_alter_petroleum_options_and_more.py  0005_depot_prices_productionplace_and_more.py  0006_remove_depot_basis_depot_rzd_code_remove_depot_user_and_more.py  0007_alter_petroleum_options.py  0008_alter_petroleum_basis_alter_petroleum_product_key.py  0009_alter_depot_rzd_code_alter_productionplace_rzd_code.py  0010_rename_price_prices_full_price.py  0011_userproductionplaces.py  0012_remove_depot_user_depot_user.py  0013_remove_depot_user_depot_user.py  0014_remove_depot_user_depot_user.py  0015_rename_production_place_id_userproductionplaces_production_place_and_more.py  0016_userproductionplace_delete_userproductionplaces.py  0017_rename_userproductionplace_userrouts_and_more.py  0018_alter_prices_options.py  0019_remove_userrouts_production_place_and_more.py  0020_alter_userrouts_options_fullprices.py  0021_remove_userrouts_depot_and_more.py  0022_alter_productionplace_options_userrouts.py  0023_delete_userrouts.py
prices_analyzer/services/: create_prices.py  create_prod_places.py  petroleum.py  serialyzer.py
prices_analyzer/services/prices_requests/: bruno.json  create_prices.bru  get_prices.bru  get_trade_day_for_day.bru
rail_tariff/: admin.py  apps.py  client.py  create_rail_tariff.py  errors.py  models.py  schemas.py  shemas.py  tasks.py  urls.py  views.py
rail_tariff/migrations/: 0001_initial.py  0002_remove_railtariff_code_base_from_and_more.py  0003_remove_productionplace_basis_delete_depot_and_more.py  0004_rzdcode_alter_railtariff_rail_code_base_from_and_more.py  0005_alter_railtariff_rail_code_base_from_and_more.py  0006_alter_railtariff_rail_code_base_from_and_more.py  0007_alter_rzdcode_code.py  0008_alter_railtariff_distance_alter_rzdcode_code.py  0009_rename_rzdcode_rzdstation.py  0010_alter_rzdstation_code.py
rail_tariff/services/: create_rail_tariff.py
rail_tariff/services/rail_tariff_requests/: bruno.json
rest_api/: filters.py  models.py  serializers.py  urls.py  views.py
rest_api/management/commands/: density_map_load.py  petroleum_map_load.py  prodplaces_map_load.py  prodplacesmapload.py
rest_api/migrations/: 0001_initial.py  0002_remove_petroleummap_petroleum_code_and_more.py  0003_densitymap.py  0004_petroleummap_petroleum_code_delete_petroleumcode.py
spimex_parser/: admin.py  apps.py  errors.py  models.py  parser.py  schemas.py  shemas.py  tasks.py  urls.py  views.py
spimex_parser/migrations/: 0001_initial.py  0002_contract_num_of_lots.py  0003_remove_contract_num_lots_alter_contract_num_of_lots_and_more.py
static/: styles.css
templates/: base_generic.html  index.html  petroleum_filter.html
templates/prices_analyzer/: depot_form.html  depot_list.html  depot_update_form.html  petroleum_list.html  prices_list.html
templates/rail_tariff/: rzdcode_detail.html  rzdcode_update_form.html  rzdstation_form.html
templates/registration/: login.html
tests/: settings.py  test_create_prod_place.py  test_prices_analyzer.py  test_rail_tariff.py  test_rest_api.py  test_spimex_parser.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
